--- a/RolePlayingGame.WPF/FightWindow.xaml
+++ b/RolePlayingGame.WPF/FightWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="FightWindow" Height="450" Width="800">
     <Grid>
-        <Image HorizontalAlignment="Left" Height="100" Margin="100,46,0,0" VerticalAlignment="Top" Width="100"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="600,46,0,0" VerticalAlignment="Top" Width="100"/>
+        <Image x:Name="HeroImage" HorizontalAlignment="Left" Height="100" Margin="100,46,0,0" VerticalAlignment="Top" Width="100" Source="/hero.png"/>
+        <Image x:Name="EnemyImage" HorizontalAlignment="Left" Height="100" Margin="600,46,0,0" VerticalAlignment="Top" Width="100" Source="/enemy.png"/>
+        <Label x:Name="HeroHpLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100, 166, 0, 0" Content="Health points: "></Label>
+        <Label x:Name="EnemyHpLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="600, 166, 0, 0" Content="Health points: "></Label>
     </Grid>
 </Window>
